# BooleanOperations

./: CMakeLists.txt  OpenCascadeCylinderExample.cpp  OpenCascadeExample.cpp  OpenCascadeSphereExample.cpp  Results.xlsx  VTKExample.cpp  VTKSphereExample.cpp  triangulate.cpp  triangulate.h  vtk.cpp  vtk.h
cmake/: FindOpenCascade.cmake
